force-app/main/default/objects/Promotions__c/Promotions__c.object-meta.xml
<CustomObject>
    <description>Represents a promotion associated with one or more products. Source of majority of the data is ERP (SAP) system</description>
    <label>Promotions</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>