force-app/main/default/objects/Promotions__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <description>This checkbox indicates if approval is required or not for given promotion.</description>
    <defaultValue>false</defaultValue>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>