force-app/main/default/objects/Promotions__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>This field represent the user who will approve the promotion.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>