force-app/main/default/objects/Promotions__c/fields/Change_History__c.field-meta.xml
<CustomField>
    <fullName>Change_History__c</fullName>
    <description>This field denotes change history for given promotion.</description>
    <label>Change History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>