force-app/main/default/objects/Promotions__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This text field stores country for promotion.</description>
    <inlineHelpText>What countries this promotion targets, if any</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>