force-app/main/default/objects/Promotions__c/fields/Customer_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Description__c</fullName>
    <description>DCP-41005: new field to store Customer Description</description>
    <label>Customer Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>