force-app/main/default/objects/Promotions__c/fields/Distributor_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Eligible__c</fullName>
    <description>This field is used to identify if distributor is eligible for given promotion.</description>
    <defaultValue>false</defaultValue>
    <label>Distributor Eligible</label>
    <type>Checkbox</type>
</CustomField>