force-app/main/default/objects/Promotions__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>This date field indicate effective date for the given promotion.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>