force-app/main/default/objects/Promotions__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>This date field indicate expiration date for the given promotion.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>