force-app/main/default/objects/Promotions__c/fields/Marketing_Trade_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Trade_In__c</fullName>
    <description>Designates if this promo requires trading-in of a Illumina (internal) or non-Illumina (external) product</description>
    <inlineHelpText>Designates if this promo requires trading-in of a Illumina (internal) or non-Illumina (external) product</inlineHelpText>
    <label>Marketing Trade-In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Trade_In</valueSetName>
    </valueSet>
</CustomField>