force-app/main/default/objects/Promotions__c/fields/Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Line__c</fullName>
    <description>This text field denotes primary product line for the promotion.</description>
    <label>Primary Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>