force-app/main/default/objects/Promotions__c/fields/Promo_Type__c.field-meta.xml
<CustomField>
    <fullName>Promo_Type__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Indicates the type of promotion. Managed by users with SL_Promotions Manager permission set. Jira Story # CMCM-10037</description>
    <inlineHelpText>Indicates the type of promotion</inlineHelpText>
    <label>Promo Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>