force-app/main/default/objects/Promotions__c/fields/Promotion_Channel__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Channel__c</fullName>
    <description>This multi-select picklist is used to indicate appropriate channel for promotion.</description>
    <inlineHelpText>Whether the promo is available Online, in Apttus, or both Online and in Apttus</inlineHelpText>
    <label>Promotion Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>O1</fullName>
            </value>
            <value>
                <fullName>O2</fullName>
            </value>
            <value>
                <fullName>O3</fullName>
            </value>
            <value>
                <fullName>OL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>