force-app/main/default/objects/Promotions__c/fields/Promotion_Channel_Description__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Channel_Description__c</fullName>
    <description>DCP-41005: new field to store Promotion  Channel Description</description>
    <label>Promotion Channel Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Online/Quoting</fullName>
            </value>
            <value>
                <fullName>Online/Quoting – One User Per UC</fullName>
            </value>
            <value>
                <fullName>Online/Quoting – Three Uses Per UC</fullName>
            </value>
            <value>
                <fullName>Online/Quoting – Two Uses Per UC</fullName>
            </value>
            <value>
                <fullName>Online Only</fullName>
            </value>
            <value>
                <fullName>Online Only – One Use Per UC</fullName>
            </value>
            <value>
                <fullName>Online Only – Three Uses Per UC</fullName>
            </value>
            <value>
                <fullName>Online Only – Two Uses Per UC</fullName>
            </value>
            <value>
                <fullName>Quoting Only</fullName>
            </value>
            <value>
                <fullName>Quoting Only – One Use Per UC</fullName>
            </value>
            <value>
                <fullName>Quoting Only – Three Uses Per UC</fullName>
            </value>
            <value>
                <fullName>Quoting Only – Two Uses Per UC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>