force-app/main/default/objects/Promotions__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <description>This field is used to store promo external id which is synced from SAP.</description>
    <externalId>true</externalId>
    <label>Promotion Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>