force-app/main/default/objects/Promotions__c/fields/Promotion_Details__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Details__c</fullName>
    <description>This long text area field provides promotion details.</description>
    <label>Promotion Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>