force-app/main/default/objects/Promotions__c/fields/Promotion_Owner__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Owner__c</fullName>
    <description>This field represents the owner of the promotion.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promotions1</relationshipName>
    <type>Lookup</type>
</CustomField>