force-app/main/default/objects/Promotions__c/fields/Redemption_Limit__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Limit__c</fullName>
    <description>This field gives the limit for redemption of promo.</description>
    <inlineHelpText>The number of times an Ultimate Consignee Account can redeem/quote this promotion</inlineHelpText>
    <label>Redemption Limit</label>
    <length>25</length>
    <type>Text</type>
</CustomField>