force-app/main/default/objects/Promotions__c/fields/Redemption_Method__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Method__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Indicates if the promotion is implicit (automatically applied) or Explicit (Manually applied). Managed by users with SL_Promotions Manager permission set. Jira Story # CMCM-12045
Data Owner: Cameo Steele / Ken Mudd</description>
    <inlineHelpText>Indicates if the promotion is Implicit (automatically applied) or Explicit (Manually applied)</inlineHelpText>
    <label>Redemption Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implicit</fullName>
            </value>
            <value>
                <fullName>Explicit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>