force-app/main/default/objects/Promotions__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <description>This field is used to identify the regions which the promotion targets.</description>
    <inlineHelpText>What regions this promotion targets</inlineHelpText>
    <label>Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMR</fullName>
            </value>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <isActive>false</isActive>
                <label>APAC</label>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <isActive>false</isActive>
                <label>EMEA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>