force-app/main/default/objects/Promotions__c/fields/Rules_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Rules_Requirements__c</fullName>
    <description>This field denotes the rules and requirements for the promotion.</description>
    <inlineHelpText>Additional rules the promotion must follow in order to be applicable</inlineHelpText>
    <label>Rules &amp; Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>