force-app/main/default/objects/Promotions__c/fields/Sales_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Description__c</fullName>
    <description>This field denotes the sales description for the given promotion.</description>
    <label>Sales Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>