force-app/main/default/objects/Promotions__c/fields/Stackable__c.field-meta.xml
<CustomField>
    <fullName>Stackable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-41005: new field to store Stackable</description>
    <label>Stackable</label>
    <type>Checkbox</type>
</CustomField>