force-app/main/default/objects/Promotions__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <description>test</description>
    <inlineHelpText>Customer facing T&amp;Cs</inlineHelpText>
    <label>Terms and Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>