force-app/main/default/objects/Promotions__c/listViews/All_Expired_Promotions.listView-meta.xml
<ListView>
    <fullName>All_Expired_Promotions</fullName>
    <columns>NAME</columns>
    <columns>Promotion_Code__c</columns>
    <columns>Promotion_Owner__c</columns>
    <columns>Approval_Required__c</columns>
    <columns>Distributor_Eligible__c</columns>
    <columns>Regions__c</columns>
    <columns>Primary_Product_Line__c</columns>
    <columns>Sales_Description__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All Expired Promotions</label>
</ListView>